--- a/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.html
+++ b/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.html
@@ -6,16 +6,24 @@
 
   <div class="legend-container">
     <div class="legend-item">
-      <span class="legend-dot alerta"></span>
+      <span class="legend-dot anomalia"></span>
       <span class="legend-text">1-2 faltas (Anomalía)</span>
     </div>
     <div class="legend-item">
-      <span class="legend-dot advertencia"></span>
-      <span class="legend-text">3-4 faltas (Advertencia)</span>
+      <span class="legend-dot incidencia"></span>
+      <span class="legend-text">3-4 faltas (Incidencia)</span>
     </div>
     <div class="legend-item">
-      <span class="legend-dot critico"></span>
-      <span class="legend-text">5+ faltas (Crítico)</span>
+      <span class="legend-dot advertencia"></span>
+      <span class="legend-text">5-6 faltas (Advertencia)</span>
+    </div>
+    <div class="legend-item">
+      <span class="legend-dot riesgo"></span>
+      <span class="legend-text">7-8 faltas (Riesgo)</span>
+    </div>
+    <div class="legend-item">
+      <span class="legend-dot emergencia"></span>
+      <span class="legend-text">9+ faltas (Emergencia)</span>
     </div>
   </div>
 
