--- a/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.css
+++ b/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.css
@@ -69,11 +69,11 @@
 }
 
 .legend-dot.anomalia {
-  background: #9ca3af;
+  background: #dbeafe;
 }
 
 .legend-dot.incidencia {
-  background: #9ca3af;
+  background: #dcfce7;
 }
 
 .legend-dot.advertencia {
