--- a/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.css
+++ b/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.css
@@ -69,15 +69,15 @@
 }
 
 .legend-dot.anomalia {
-  background: #dbeafe;
+  background: #60a5fa;
 }
 
 .legend-dot.incidencia {
-  background: #dcfce7;
+  background: #4ade80;
 }
 
 .legend-dot.advertencia {
-  background: #9ca3af;
+  background: #fb923c;
 }
 
 .legend-dot.riesgo {
