--- a/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.html
+++ b/src/app/alerta-temprana/prevencion-atencion/prevencion-atencion.component.html
@@ -7,23 +7,23 @@
   <div class="legend-container">
     <div class="legend-item">
       <span class="legend-dot anomalia"></span>
-      <span class="legend-text">1-2 faltas (Anomalía)</span>
+      <span class="legend-text">1-2 faltas "Anomalía"</span>
     </div>
     <div class="legend-item">
       <span class="legend-dot incidencia"></span>
-      <span class="legend-text">3-4 faltas (Incidencia)</span>
+      <span class="legend-text">3-4 faltas "Incidencia"</span>
     </div>
     <div class="legend-item">
       <span class="legend-dot advertencia"></span>
-      <span class="legend-text">5-6 faltas (Advertencia)</span>
+      <span class="legend-text">5-6 faltas "Advertencia"</span>
     </div>
     <div class="legend-item">
       <span class="legend-dot riesgo"></span>
-      <span class="legend-text">7-8 faltas (Riesgo)</span>
+      <span class="legend-text">7-8 faltas "Riesgo"</span>
     </div>
     <div class="legend-item">
       <span class="legend-dot emergencia"></span>
-      <span class="legend-text">9+ faltas (Emergencia)</span>
+      <span class="legend-text">9+ faltas "Emergencia"</span>
     </div>
   </div>
 
