--- a/src/app/alerta-temprana/alerta-temprana.component.html
+++ b/src/app/alerta-temprana/alerta-temprana.component.html
@@ -26,5 +26,6 @@
     <app-seguimiento-registro *ngIf="activeTab === 'seguimiento'"></app-seguimiento-registro>
     <app-prevencion-atencion *ngIf="activeTab === 'prevencion'"></app-prevencion-atencion>
     <app-intervencion-colaborativa *ngIf="activeTab === 'intervencion'"></app-intervencion-colaborativa>
+    <app-alerta-desercion *ngIf="activeTab === 'desercion'"></app-alerta-desercion>
   </main>
 </div>
