--- a/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
+++ b/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
@@ -12,7 +12,7 @@
   <div *ngIf="!isLoading">
     <div class="general-section">
       <div class="general-header">
-        <h3>Indicadores Generales de la Institución</h3>
+        <h3>Indicadores Generales de Asistencia de la Institución</h3>
         <p class="general-subtitle">Visualización consolidada de todas las carreras</p>
       </div>
 
