--- a/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
+++ b/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
@@ -13,7 +13,7 @@
     <div class="general-section">
       <div class="general-header">
         <h3>Indicadores Generales de Asistencia de la Institución</h3>
-        <p class="general-subtitle">Visualización consolidada de todas las carreras</p>
+        <p class="general-subtitle">Visualización consolidada de todos los programas educativos</p>
       </div>
 
       <div class="charts-row-general">
