--- a/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
+++ b/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
@@ -64,7 +64,7 @@
     <div class="carreras-section">
       <div class="carreras-header">
         <h3>Desglose por Carrera</h3>
-        <p class="carreras-subtitle">Haz clic en una carrera para ver el detalle</p>
+        <p class="carreras-subtitle">Indicadores de asistencia por cada programa educativo</p>
       </div>
 
       <div class="carreras-container">
