--- a/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
+++ b/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
@@ -74,7 +74,7 @@
           <h3>{{ carrera.nombre }}</h3>
           <span class="estudiantes-count">{{ carrera.totalEstudiantes }} estudiantes</span>
         </div>
-        <button class="toggle-btn" [class.expanded]="carrera.expanded">
+        <button class="toggle-btn" [class.expanded]="carrera.expanded">XC
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <polyline points="6 9 12 15 18 9"></polyline>
           </svg>
