--- a/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
+++ b/src/app/indicadores-academicos/indicadores-asistencia/indicadores-asistencia.component.html
@@ -172,6 +172,9 @@
                       <span class="detail-item">
                         <strong>Estudiantes:</strong> {{ asignatura.totalEstudiantes }}
                       </span>
+                      <span class="detail-item">
+                        <strong>Total de Sesiones:</strong> {{ asignatura.totalSesiones }}
+                      </span>
                     </div>
 
                     <div class="asignatura-chart">
